5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1712_2503.log
== TEST (2019-05-15 08:12:25) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
x = 0
c = 1
aux = 1

while(i < n):
	y = aux * (4 / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:12:33) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
x = 0
c = 1
aux = 1

while(i < n):
	y = aux * (4 / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:12:39) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
x = 0
c = 1
aux = 1

while(i < n):
	y = aux * (4 / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:14:43) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
x = 0
c = 1
aux = 1

while(i < n):
	y = aux * 4 / c
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:14:58) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
x = 0
c = 1
aux = 1

while(i < n):
	y = aux * 4 / c
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:15:09) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
x = 0
c = 1
aux = 1

while(i < n):
	y = (aux * 4) / c
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:16:09) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1

aux = 1
while(i < n):
	y = (aux * 4) / c
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:18:01) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1


while(i < n):
	y = ((-1)**(c +1) * 4) / c
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- OUTPUT:
0.01476015
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:19:26) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1

aux = 1

while(i < n):
	y = y + (aux * 4) / c
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    y = y + (aux * 4) / c
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:19:38) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1

aux = 1

while(i < n):
	y = y + ((aux * 4) / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    y = y + ((aux * 4) / c)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:20:40) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0
aux = 1

while(i < n):
	y = y + ((aux * 4) / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- EXECUTION TIME:
0.197261
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
13.75233433
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
10.10927707
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
9.34349054
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:20:41) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0
aux = 1

while(i < n):
	y = y + ((aux * 4) / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:20:55) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0
aux = 1

while(i < n):
	y = y + ((aux * 4) / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:21:09) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0
aux = 1

while(i < n):
	y = y + (aux * 4 / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:24:35) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0
aux = 1

while(i < n):
	y = y + aux * (4 / c)
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:25:50) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0
aux = 1

while(i < n):
	y = y + (aux * (4 / c))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else: 
		aux = -1
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:35:25) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0


while(i < n):
	y = y + (-1)**(c + 1) * (4 / c)
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:36:00) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0


while(i < n):
	y = y + (((-1)**(c + 1) * 4) / c)/
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- ERROR:
File "XXXX", line 9
    y = y + (((-1)**(c + 1) * 4) / c)/
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:36:04) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0


while(i < n):
	y = y + (((-1)**(c + 1) * 4) / c)/
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- ERROR:
File "XXXX", line 9
    y = y + (((-1)**(c + 1) * 4) / c)/
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:36:11) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0


while(i < n):
	y = y + (((-1)**(c + 1) * 4) / c)
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:37:38) 
-- CODE:
n = int(input("Insira um numero: "))

i = 0
c = 1
y = 0


while(i < n):
	y = y + ((((-1)**(c + 1)) * 4) / c)
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:41:35) 
-- CODE:
n = int(input("Insira um numero: "))
y = 0
i = 0
c = 1


while(i < n):
	y = y + (-1)**i * 4 / c 
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:41:42) 
-- CODE:
n = int(input("Insira um numero: "))
y = 0
i = 0
c = 1


while(i < n):
	y = y + (-1)**i * 4 / c 
	i = i + 1
	c = c + 2
	
		
print(round(y, 8))
-- EXECUTION TIME:
0.119222
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
